--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Basic Chat Application using socket-io",
     "main": "app.js",
     "scripts": {
-        "start": "node ./src/app.js",
+        "start": "nodemon app.js",
         "test": "mocha ./specs/app.spec.js"
     },
     "homepage": "https://github.com/manish-baghel/scotch-io#readme",
